--- a/src/nx.html
+++ b/src/nx.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([]);
-        edges = new vis.DataSet([]);
+        nodes = new vis.DataSet([{"font": {"color": "black"}, "group": 5, "id": "Revenue", "label": "\uc218\uc775(\ub9e4\ucd9c\uc561)", "shape": "dot", "size": 10, "title": "Statement: IS Type: Value"}, {"font": {"color": "black"}, "group": 98, "id": "CostOfSalesRatio", "label": "\ub9e4\ucd9c\uc6d0\uac00\uc728", "shape": "dot", "size": 12, "title": "Statement: IS Type: Ratio"}, {"font": {"color": "black"}, "group": 5, "id": "CostOfSales", "label": "\ub9e4\ucd9c\uc6d0\uac00", "shape": "dot", "size": 10, "title": "Statement: IS Type: Value"}]);
+        edges = new vis.DataSet([{"arrows": "to", "from": "Revenue", "title": "denominator", "to": "CostOfSalesRatio", "weight": 2}, {"arrows": "to", "from": "CostOfSales", "title": "numerator", "to": "CostOfSalesRatio", "weight": 2}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
